cluster/apps/networking-system/external-services/adguardhome/endpoints.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: adguardhome
subsets:
  - addresses:
      - ip: 192.168.10.1
    ports:
      - name: http
        port: 3000
        protocol: TCP
