cluster/apps/networking-system/external-services/adguardhome/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguardhome
spec:
  hostnames: ["adguard.${SECRET_DOMAIN_0}"]
  parentRefs:
    - name: internal
      namespace: networking-system
      port: 443
  rules:
    - backendRefs:
        - name: adguardhome
          port: 3000
